  * named parameters in the interpreter
  * puma robot kinematics
  * sample configuration for a puma robot
  * reduce quantization of the encoder module's velocity output
  * MDI history manipulation and save in AXIS
  * home to index on STG1
  * number of samples in halscope can be specified at runtime
  * add 'source' command to halcmd
  * add tcl interface to halcmd commands (tcl/hal.so)

 -- jepler <jepler@unpythonic.net>  Tue, 20 Feb 2007 14:18:55 -0600

*** here, insert 2.1.x changes before releasing 2.2.0 ***

emc2 (1:2.1.0) testing; urgency=low

  * Prepare for release
  * AXIS debug level dialog. Users can now choose verbosity directly from AXIS
  * HAL driver & sample config for the pluto FPGA board
  * AXIS home-all and pyvcp support
  * 'unobtainable step rate' error message. when the user requests a
    velocity which is too high (improper config) this gets reported as
    a warning during startup.
  * streamer (component for data passing from realtime to userspace)
  * removed HAL types s8, u8, s16, and u16.  HAL now uses float for
    analog values, bit for booleans, and s32 or u32 for integer values.
    The only users who will be affected are those with Universal Stepper
    Controller cards.  See item 9 at
    http://wiki.linuxcnc.org/cgi-bin/emcinfo.pl?UpdatingConfigurationsForDevelopmentVersions
  * merged classicladder 0.7.100
  * added a feed-hold HAL pin.  Added M codes to enable/disable feed
    override, spindle override, feed hold, and adaptive feed individually.
    Feed override is M50, spindle override is M51, adaptive feed is M52,
    and feed hold is M53.  G50/51 are no longer used to enable/disable
    adaptive feed, use M52 instead.
  * added support for block delete as defined by Section 2.2.2 in the
    RS274NGC_3 specs.
  * added support for optional program stop as defined by Section 2.2.3
    in the RS274NGC_3 specs.
  * manpages have been created for most rtapi and hal calls