@@ -22,8 +22,9 @@ emc2 (2.2.0pre) testing; urgency=low
   * number of samples in halscope can be specified at runtime
   * add 'source' command to halcmd
   * add tcl interface to halcmd commands (tcl/hal.so)
+  * add "-U" (force unload) to halrun script 
 
- -- jepler <jepler@unpythonic.net>  Tue, 20 Feb 2007 14:18:55 -0600
+ -- jepler <jepler@unpythonic.net>  Tue, 20 Feb 2007 15:02:26 -0600
 
 *** here, insert 2.1.x changes before releasing 2.2.0 ***
 
